mini server added

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -428,6 +428,10 @@ body{
                         color: #FFFFFF;
                      }
                   }
+                  .selected{
+                     background-color: #64A0C2;
+                     color: #FFFFFF;
+                  }
                }
             }
             .motivation-block{
